--- a/hi9-login.html
+++ b/hi9-login.html
@@ -1,33 +1,108 @@
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../firebase-element/firebase-auth.html">
-
-<dom-module id="hi9-login">
+<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../firebase-auth.html">
+<dom-module id="x-login">
   <template>
-    <firebase-auth id="firebaseLogin"
-      user="{{user}}"
-      location="https://my-project.firebaseio.com"
-      provider="facebook"
-      on-error="_errorHandler"
-      on-login="_loginHandler"></firebase-auth>
+    <firebase-auth id="firebaseLogin" user="{{user}}" status-known="{{statusKnown}}" location="https://hi9site.firebaseio.com" provider="google" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" on-user-removed="userSuccessHandler"></firebase-auth>
 
-    <button on-tap="login">Login with facebook</button>
-    <button on-tap="logout">Logout</button>
+    <button on-tap="login" hidden$="{{computeLoginHidden(statusKnown, user)}}">Login</button>
+    <button on-tap="logout" hidden$="{{computeLogoutHidden(statusKnown, user)}}">Logout</button>
+
+    <h3>Login status:</h3>
+    <p>{{computeLoginStatus(statusKnown, user)}}</p>
+
+    <h3>User ID:</h3>
+    <pre>{{user.uid}}</pre>
   </template>
 </dom-module>
 <script>
-Polymer({
-  is: 'hi9-login',
-  properties: {
-    successRedirect: String
-  },
-  _errorHandler: function(e){
-    console.log(e.detail);
-  },
-  _loginHandler: function(e){
-    if(this.successRedirect){
-      // How can I tell pagejs to redirect me ?
-      app.route = this.successRedirect;
+  Polymer({
+    is: 'x-login',
+    properties: {
+      provider: {
+        type: String,
+        value: 'anonymous'
+      },
+      message: {
+        type: String,
+        value: ''
+      },
+      email: {
+        type: String,
+        value: ''
+      },
+      password: {
+        type: String,
+        value: ''
+      },
+      user: {
+        type: Object,
+        value: null
+      },
+      statusKnown: {
+        type: Boolean
+      }
+    },
+    login: function() {
+      var params;
+      try {
+        params = JSON.parse(this.params);
+      } catch (e) {
+        params = null;
+      }
+      if (this.provider == 'password') {
+        params = params || {};
+        params.email = this.email;
+        params.password = this.password;
+      }
+      this.$.firebaseLogin.login(params);
+    },
+    logout: function() {
+      this.$.firebaseLogin.logout();
+    },
+    errorHandler: function(e) {
+      this.message = 'Error: ' + e.detail.message;
+    },
+    userSuccessHandler: function(e) {
+      this.message = e.type + ' success!';
+    },
+    createUserHandler: function(e) {
+      this.$.firebaseLogin.createUser(this.email, this.password);
+    },
+    changePasswordHandler: function(e) {
+      this.$.firebaseLogin.changePassword(this.email, this.password, this.newPassword);
+    },
+    resetPasswordHandler: function(e) {
+      this.$.firebaseLogin.sendPasswordResetEmail(this.email);
+    },
+    computePasswordHidden: function(provider) {
+      return provider !== 'password';
+    },
+    computeCreateUserDisabled: function(email, password) {
+      return !email || !password;
+    },
+    computeChangePasswordDisabled: function(email, password, newPassword) {
+      return !email || !password || !newPassword;
+    },
+    computeResetPasswordDisabled: function(email, password) {
+      return !email || !password;
+    },
+    computeRemoveUserDisabled: function(email, password) {
+      return !email || !password;
+    },
+    computeLoginHidden: function(statusKnown, user) {
+      return !statusKnown || !!user;
+    },
+    computeLogoutHidden: function(statusKnown, user) {
+      return !statusKnown || !user;
+    },
+    computeLoginStatus: function(statusKnown, user) {
+      if (statusKnown && user) {
+        return 'Logged in';
+      }
+      if (statusKnown) {
+        return 'Logged out';
+      }
+      return 'Unknown (checking status...)';
     }
-  }
-});
+  });
 </script>
