--- a/hi9-login.html
+++ b/hi9-login.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../../polymer/polymer.html">
 <link rel="import" href="../firebase-auth.html">
-<dom-module id="x-login">
+<dom-module id="hi9-login">
   <template>
     <firebase-auth id="firebaseLogin" user="{{user}}" status-known="{{statusKnown}}" location="https://hi9site.firebaseio.com" provider="google" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" on-user-removed="userSuccessHandler"></firebase-auth>
 
@@ -16,7 +16,7 @@
 </dom-module>
 <script>
   Polymer({
-    is: 'x-login',
+    is: 'hi9-login',
     properties: {
       provider: {
         type: String,
