--- a/hi9-login.html
+++ b/hi9-login.html
@@ -1,17 +1,14 @@
-<link rel="import" href="../../polymer/polymer.html">
-<link rel="import" href="../firebase-auth.html">
+<link rel="import" href="../polymer/polymer.html">
+<!-- TODO add paper-button -->
+<link rel="import" href="../firebase-element/firebase-auth.html">
+
 <dom-module id="hi9-login">
   <template>
     <firebase-auth id="firebaseLogin" user="{{user}}" status-known="{{statusKnown}}" location="https://hi9site.firebaseio.com" provider="google" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" on-user-removed="userSuccessHandler"></firebase-auth>
 
-    <button on-tap="login" hidden$="{{computeLoginHidden(statusKnown, user)}}">Login</button>
-    <button on-tap="logout" hidden$="{{computeLogoutHidden(statusKnown, user)}}">Logout</button>
+    <paper-button on-tap="login" hidden$="{{computeLoginHidden(statusKnown, user)}}">Login</paper-button>
+    <paper-button  on-tap="logout" hidden$="{{computeLogoutHidden(statusKnown, user)}}">Logout</paper-button>
 
-    <h3>Login status:</h3>
-    <p>{{computeLoginStatus(statusKnown, user)}}</p>
-
-    <h3>User ID:</h3>
-    <pre>{{user.uid}}</pre>
   </template>
 </dom-module>
 <script>
