--- a/hi9-login.html
+++ b/hi9-login.html
@@ -8,14 +8,15 @@
     <firebase-auth id="firebaseLogin" user="{{user}}" status-known="{{statusKnown}}" location="https://hi9site.firebaseio.com" provider="google" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" on-user-removed="userSuccessHandler"></firebase-auth>
     
     <paper-button on-tap="logout" hidden$="{{computeLogoutHidden(statusKnown, user)}}">Logout</paper-button>
-     <paper-dialog opened hidden$="{{computeLoginHidden(statusKnown, user)}}">
-      <p> This is your first time at HI9 please login to use the site </p>
+    <paper-button on-tap="login" hidden$="{{computeLoginHidden(statusKnown, user)}}" >Login</paper-button>
+  <template is="dom-if" if="{{computeLogoutHidden(statusKnown, user)}}">
+   <paper-dialog modal>
+      <p> This is your first time at HI9 please login to use the site.  </p>
       <div class="buttons"> 
         <paper-button on-tap="login" dialog-confirm >Login</paper-button>
       </div>
     </paper-dialog>
-
-  </template>
+</template>
 </dom-module>
 <script>
   Polymer({
