--- a/hi9-login.html
+++ b/hi9-login.html
@@ -16,6 +16,7 @@
         <paper-button on-tap="login" dialog-confirm >Login</paper-button>
       </div>
     </paper-dialog>
+  </template>
 </template>
 </dom-module>
 <script>
