--- a/hi9-login.html
+++ b/hi9-login.html
@@ -2,6 +2,9 @@
 <link rel="import" href="../firebase-element/firebase-auth.html">
 <link rel="import" href="../paper-dialog/paper-dialog.html">
 <link rel="import" href="../paper-button/paper-button.html">
+<link rel="import" href="../paper-styles/paper-styles.html">
+<link rel="import" href="../paper-styles/demo-pages.html">
+<link rel="import" href="../neon-animation/neon-animations.html">
 
 <dom-module id="hi9-login">
   <template>
