--- a/hi9-login.html
+++ b/hi9-login.html
@@ -42,7 +42,7 @@
       statusKnown: {
         type: Boolean
       },
-      show_model {
+      show_model: {
         type: Boolean,
         notify: true,
         computed: "computeLogoutHidden(statusKnown, user)"
