--- a/hi9-login.html
+++ b/hi9-login.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../firebase-element/firebase-auth.html">
+<link rel="import" href="../firebase-element/firebaseDocument.html">
 <link rel="import" href="../paper-dialog/paper-dialog.html">
 <link rel="import" href="../paper-button/paper-button.html">
 <link rel="import" href="../paper-styles/paper-styles.html">
@@ -9,6 +10,7 @@
 <dom-module id="hi9-login">
   <template>
     <firebase-auth id="firebaseLogin" user="{{user}}" status-known="{{statusKnown}}" location="https://hi9site.firebaseio.com" provider="google" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" on-user-removed="userSuccessHandler"></firebase-auth>
+    <firebase-document location="https://hi9site.firebaseio.com/data" id="log"></firebase-document>
     
     <paper-button on-tap="logout" hidden$="{{computeLogoutHidden(statusKnown, user)}}">Logout</paper-button>
     <paper-button on-tap="login" hidden$="{{computeLoginHidden(statusKnown, user)}}" >Login</paper-button>
@@ -61,6 +63,9 @@
         params.password = this.password;
       }
       this.$.firebaseLogin.login(params);
+      
+      this.$.log.query.ref().push("test")
+
     },
     logout: function() {
       this.$.firebaseLogin.logout();
