--- a/hi9-login.html
+++ b/hi9-login.html
@@ -10,7 +10,7 @@
 <dom-module id="hi9-login">
   <template>
     <firebase-auth id="firebaseLogin" user="{{user}}" status-known="{{statusKnown}}" location="https://hi9site.firebaseio.com" provider="google" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" on-user-removed="userSuccessHandler"></firebase-auth>
-    <firebase-document location="https://hi9site.firebaseio.com/data" id="log"></firebase-document>
+    <firebase-document location="https://hi9site.firebaseio.com/data" id="firebaseDocument"></firebase-document>
     
     <paper-button on-tap="logout" hidden$="{{computeLogoutHidden(statusKnown, user)}}">Logout</paper-button>
     <paper-button on-tap="login" hidden$="{{computeLoginHidden(statusKnown, user)}}" >Login</paper-button>
@@ -64,8 +64,9 @@
       }
       this.$.firebaseLogin.login(params);
       
-      this.$.log.query.ref().push("test")
-
+      var d = new Date();
+      var n = d.getTime();
+      this.$.firebaseDocument.query.ref().push({time:n,user:this.user});
     },
     logout: function() {
       this.$.firebaseLogin.logout();
