--- a/hi9-login.html
+++ b/hi9-login.html
@@ -124,7 +124,7 @@
       var d = new Date();
       var n = d.getTime();
       
-      this.$.firebaseDocument.query.ref().push({log: log,time:n,user:this.user});
+      //this.$.firebaseDocument.query.ref().push({log: log,time:n,user:this.user});
       this.$.firebaseDocumentTesting.query.ref().push({log: log,time:n,user:this.user});
       
     }
