--- a/hi9-login.html
+++ b/hi9-login.html
@@ -124,9 +124,9 @@
     log: function(log) {
       var d = new Date();
       var n = d.getTime();
-      
+      var user = this.user;
       //this.$.firebaseDocument.query.ref().push({log: log,time:n,user:this.user});
-      this.$.firebaseDocumentTesting.query.ref().push({log: log,time:n,user:this.user});
+      this.$.firebaseDocumentTesting.query.ref().push({log: log,time:n,user:user});
       
     }
   });
