--- a/hi9-login.html
+++ b/hi9-login.html
@@ -11,8 +11,6 @@
   <template>
     <firebase-auth id="firebaseLogin" user="{{user}}" status-known="{{statusKnown}}" location="https://hi9site.firebaseio.com" provider="google" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" on-user-removed="userSuccessHandler"></firebase-auth>
     <firebase-document location="https://hi9site.firebaseio.com/data" id="firebaseDocument"></firebase-document>
-    <firebase-document id="firebaseDocumentTesting" location="https://push.firebaseio-demo.com">
-      </firebase-document>
     
     <paper-button on-tap="logout" hidden$="{{computeLogoutHidden(statusKnown, user)}}">Logout</paper-button>
     <paper-button on-tap="login" hidden$="{{computeLoginHidden(statusKnown, user)}}" >Login</paper-button>
@@ -125,9 +123,7 @@
       var d = new Date();
       var n = d.getTime();
       var user = this.user;
-      //this.$.firebaseDocument.query.ref().push({log: log,time:n,user:this.user});
-      this.$.firebaseDocumentTesting.query.ref().push({log: log,time:n,user:user});
-      
+      this.$.firebaseDocument.query.ref().push({log: log,time:n,user:user});
     }
   });
 </script>
