--- a/hi9-login.html
+++ b/hi9-login.html
@@ -39,7 +39,8 @@
       },
       user: {
         type: Object,
-        value: null
+        value: null,
+        notify: true
       },
       statusKnown: {
         type: Boolean
