--- a/hi9-login.html
+++ b/hi9-login.html
@@ -21,6 +21,9 @@
   Polymer({
     is: 'hi9-login',
     properties: {
+      params: {
+        scope: "email"
+      },
       provider: {
         type: String,
         value: 'anonymous'
