--- a/hi9-login.html
+++ b/hi9-login.html
@@ -36,7 +36,7 @@
         type: String,
         value: ''
       },
-      user: {observer
+      user: {
         type: Object,
         value: null,
         notify: true,
