--- a/hi9-login.html
+++ b/hi9-login.html
@@ -40,7 +40,7 @@
         type: Object,
         value: null,
         notify: true,
-        observer: "userUpdata(user)"
+        observer: "userUpdate(user)"
       },
       statusKnown: {
         type: Boolean
