--- a/hi9-login.html
+++ b/hi9-login.html
@@ -21,33 +21,29 @@
         scope: "email"
       },
       provider: {
-        type: String,
-        value: 'anonymous'
+        type: String, value: 'anonymous'
       },
       message: {
-        type: String,
-        value: ''
+        type: String, value: ''
       },
+      userData: {
+        type: Object, value: null
+      }
       email: {
-        type: String,
-        value: ''
+        type: String, value: ''
       },
       password: {
-        type: String,
-        value: ''
+        type: String, value: ''
       },
       user: {
-        type: Object,
-        value: null,
-        notify: true,
-        observer: "userUpdate"
+        type: Object, value: null,
+        notify: true, observer: "userUpdate"
       },
       statusKnown: {
         type: Boolean
       },
       show_model: {
-        type: Boolean,
-        notify: true,
+        type: Boolean, notify: true,
         computed: "computeLogoutHidden(statusKnown, user)"
       },
       role: {
