--- a/hi9-login.html
+++ b/hi9-login.html
@@ -27,7 +27,7 @@
         type: String, value: ''
       },
       userData: {
-        type: Object, value: null
+        type: Object
       },
       email: {
         type: String, value: ''
