--- a/hi9-login.html
+++ b/hi9-login.html
@@ -27,7 +27,7 @@
         type: String, value: ''
       },
       userData: {
-        type: Object
+        type: Object, observer: "userUpdate"
       },
       email: {
         type: String, value: ''
