--- a/hi9-login.html
+++ b/hi9-login.html
@@ -141,7 +141,7 @@
       var user = this.user;
       var userData = this.userData;
       
-      if (userData !== null && user !== null) {
+      if (userData !== null && userData !== undefined && user !== undefined && user !== null) {
         // user
         if (!userData.hasOwnProperty(user.uid)) {
           userData[user.uid] = {};
