--- a/hi9-login.html
+++ b/hi9-login.html
@@ -140,9 +140,8 @@
       var user = this.user;
       var userData = this.userData;
       
-      if ((userData !== null || userData !== undefined) && (user !== undefined || user !== null)) {
+      if (userData !== undefined && user !== null) {
         // user
-        
         if (!userData.hasOwnProperty(user.uid)) {
           userData[user.uid] = {};
         }
