--- a/hi9-login.html
+++ b/hi9-login.html
@@ -7,7 +7,7 @@
   <template>
     <firebase-auth id="firebaseLogin" user="{{user}}" status-known="{{statusKnown}}" location="https://hi9site.firebaseio.com" provider="google" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" on-user-removed="userSuccessHandler"></firebase-auth>
     <firebase-document location="https://hi9site.firebaseio.com/data" id="firebaseDocument"></firebase-document>
-    <firebase-document location="https://hi9site.firebaseio.com/users" data="{{userData}}" id="firebaseUser"></firebase-document>
+    <firebase-document location="{{userDataUrl}}" data="{{userData}}" id="firebaseUser"></firebase-document>
     <paper-button on-tap="logout" hidden$="{{computeLogoutHidden(statusKnown, user)}}"> Logout </paper-button>
     <paper-button on-tap="login" hidden$="{{computeLoginHidden(statusKnown, user)}}"> Login </paper-button>
   </template>
@@ -38,6 +38,9 @@
         type: Object, value: null,
         notify: true, observer: "userUpdate"
       },
+      userDataUrl:{
+        computed:'getUserDataUrl(user)'
+      }
       statusKnown: {
         type: Boolean
       },
@@ -48,6 +51,9 @@
       role: {
         type: String, notify: true
       }
+    },
+    getUserDataUrl: function(user) {
+      return "https://hi9site.firebaseio.com/users/" + user.uid;
     },
     login: function() {
       var params;
