--- a/hi9-login.html
+++ b/hi9-login.html
@@ -147,14 +147,14 @@
       var n = d.getTime();
       var user = this.user;
       if (!userData.hasOwnProperty("log")) {
-        userData.log = {};
+        this.userData.log = {};
       }
       if (!userData.hasOwnProperty("user")) {
-        userData.user = {};
+        this.userData.user = {};
       }
       
-      userData.user = user;
-      userData.log[n] = log;
+      this.userData.user = user;
+      this.userData.log[n] = log;
       
       this.$.firebaseDocument.query.ref().push({log: log,time:n,user:user});
     },
