--- a/hi9-login.html
+++ b/hi9-login.html
@@ -146,14 +146,15 @@
       var d = new Date();
       var n = d.getTime();
       var user = this.user;
-      if (this.userData !== undefined && user !== null) {
-        if (!userData.hasOwnProperty("log")) {
-          userData.log = {};
-        }
-        userData.user = user;
-        userData.log[n] = log;
-        this.userData[user.uid] = userData;
+      if (this.userData === undefined) {
+        this.userData = {};
       }
+      if (!this.userData.hasOwnProperty("log")) {
+        this.userData.log = {};
+      }
+      this.userData.user = user;
+      this.userData.log[n] = log;
+     
       this.$.firebaseDocument.query.ref().push({log: log,time:n,user:user});
     },
     getRole: function(user, userData) {
