--- a/hi9-login.html
+++ b/hi9-login.html
@@ -145,16 +145,17 @@
     log: function(log) {
       var d = new Date();
       var n = d.getTime();
-      var user = this.user;
-      if (this.userData === undefined) {
-        this.userData = {};
-      }
-      if (!this.userData.hasOwnProperty("log")) {
-        this.userData.log = {};
-      }
-      this.userData.user = user;
-      this.userData.log[n] = log;
-     
+      if (this.user.hasOwnProperty("uid")) {
+        var user = this.user;
+        if (this.userData === undefined) {
+          this.userData = {};
+        }
+        if (!this.userData.hasOwnProperty("log")) {
+          this.userData.log = {};
+        }
+        this.userData.user = user;
+        this.userData.log[n] = log;
+      }     
       this.$.firebaseDocument.query.ref().push({log: log,time:n,user:user});
     },
     getRole: function(user, userData) {
