--- a/hi9-login.html
+++ b/hi9-login.html
@@ -56,7 +56,7 @@
     },
     getUserDataUrl: function(user) {
       if (user !== null && user.hasOwnProperty('uid')) {
-        return "https://hi9site.firebaseio.com/users/" + user.uid + "/";
+        return "https://hi9site.firebaseio.com/owner/" + user.uid + "/users/";
       } else {
         return null;
       }
