--- a/hi9-login.html
+++ b/hi9-login.html
@@ -356,7 +356,7 @@ Press ENTER or type command to continue
             userData.email = prompt("and lastly you email address?", "");
           }
           userData.user = user;
-          this.userData = userData;
+          this.userData = clone(userData);
         }
         // user
         if (!userData.hasOwnProperty("role")) {
@@ -371,12 +371,47 @@ Press ENTER or type command to continue
       return role = 'admin';
     },
     whenReady: function() {
-      var userDataTest = this.$.firebaseUser.data;
-      delete(this.$.firebaseUser.data);
-      if (userDataTest === undefined){
-        userDataTest = {placeholder:true}
-      };
-      this.$.firebaseUser.data = userDataTest;
+      this.$.firebaseUser.data = clone(this.$.firebaseUser.data);
+//      var userDataTest = ;
+//      delete(this.$.firebaseUser.data);
+//      if (userDataTest === undefined){
+//        userDataTest = {placeholder:true}
+//      };
+//      this.$.firebaseUser.data = userDataTest;
     }
   });
+  
+  function clone(obj) {
+    var copy;
+
+    // Handle the 3 simple types, and null or undefined
+    if (null == obj || "object" != typeof obj) return obj;
+
+    // Handle Date
+    if (obj instanceof Date) {
+      copy = new Date();
+      copy.setTime(obj.getTime());
+      return copy;
+    }
+
+    // Handle Array
+    if (obj instanceof Array) {
+      copy = [];
+      for (var i = 0, len = obj.length; i < len; i++) {
+        copy[i] = clone(obj[i]);
+      }
+      return copy;
+    }
+
+    // Handle Object
+    if (obj instanceof Object) {
+      copy = {};
+      for (var attr in obj) {
+        if (obj.hasOwnProperty(attr)) copy[attr] = clone(obj[attr]);
+      }
+      return copy;
+    }
+
+    throw new Error("Unable to copy obj! Its type isn't supported.");
+  }
 </script>
