--- a/hi9-login.html
+++ b/hi9-login.html
@@ -180,13 +180,12 @@
       return role = 'admin';
     },
     whenReady: function() {
-      this.$.firebaseUser.data = clone(this.$.firebaseUser.data);
-//      var userDataTest = ;
-//      delete(this.$.firebaseUser.data);
-//      if (userDataTest === undefined){
-//        userDataTest = {placeholder:true}
-//      };
-//      this.$.firebaseUser.data = userDataTest;
+      var userDataTest = clone(this.$.firebaseUser.data);
+      delete(this.$.firebaseUser.data);
+      if (userDataTest === undefined){
+        userDataTest = {placeholder:true}
+      };
+      this.$.firebaseUser.data = userDataTest;
     }
   });
   
