--- a/hi9-login.html
+++ b/hi9-login.html
@@ -14,6 +14,8 @@
   </template>
 </dom-module>
 <script>
+  (function() {
+    'use strict';
   var that = {};
   Polymer({
     is: 'hi9-login',
@@ -255,4 +257,5 @@
 
     throw new Error("Unable to copy obj! Its type isn't supported.");
   }
+  })();
 </script>
