--- a/hi9-login.html
+++ b/hi9-login.html
@@ -40,6 +40,10 @@
         type: Object, value: null,
         notify: true
       },
+      userData: {
+        type: Object, value: null,
+        notify: true
+      },
       uid: {
         computed:'returnVal(user.uid)'
       },
