--- a/hi9-login.html
+++ b/hi9-login.html
@@ -72,7 +72,9 @@
       }
     },
     dataChanged: function(data) {
-      this.userData = clone(data);
+      if (this.returnVal(this.userData) !== undefined && this.returnVal(data) !== undefined) {
+        this.userData = clone(data);
+      }
     },
     returnVal: function(val) {
       if (val !== undefined && val !== null) {
