--- a/hi9-login.html
+++ b/hi9-login.html
@@ -73,7 +73,7 @@
     },
     dataChanged: function(data) {
       if (this.returnVal(this.userData) !== undefined && this.returnVal(data) !== undefined) {
-        this.userData = clone(data);
+        //this.userData = clone(data);
       }
     },
     returnVal: function(val) {
