--- a/hi9-login.html
+++ b/hi9-login.html
@@ -6,9 +6,8 @@
 <dom-module id="hi9-login">
   <template>
     <firebase-auth id="firebaseLogin" user="{{user}}" status-known="{{statusKnown}}" location="https://hi9site.firebaseio.com" provider="google" on-error="errorHandler" on-user-created="userSuccessHandler" on-password-changed="userSuccessHandler" on-password-reset="userSuccessHandler" on-user-removed="userSuccessHandler"></firebase-auth>
-    <!--  <firebase-document location="https://hi9site.firebaseio.com/data" id="firebaseDocument"></firebase-document> -->
-    <firebase-document location="{{userDataUrl}}" data="{{userData}}" id="firebaseUser"></firebase-document>
-    <firebase-document location="{{ownerDataUrl}}" data="{{ownerData}}" id="firebaseOwner"></firebase-document>
+    <firebase-document location="https://hi9site.firebaseio.com/data" id="firebaseDocument"></firebase-document>
+    
     <paper-button on-tap="logout" hidden$="{{computeLogoutHidden(statusKnown, user)}}"> Logout </paper-button>
     <paper-button on-tap="login" hidden$="{{computeLoginHidden(statusKnown, user)}}"> Login </paper-button>
   </template>
@@ -78,12 +77,6 @@
         return undefined;
       }
     },
-    getOwnerDataUrl: function(owner,uid) {
-      return "https://hi9site.firebaseio.com/owner/" + owner + "/users/" + uid;
-    },
-    getUserDataUrl: function(uid) {
-      return "https://hi9site.firebaseio.com/users/" + uid;
-    },
     login: function() {
       var params;
       try {
@@ -109,47 +102,36 @@
       this.message = 'Error: ' + e.detail.message;
     },
     userSuccessHandler: function(e) {
-      this.log("Login Status");
       this.message = e.type + ' success!';
     },
     createUserHandler: function(e) {
-      this.log("createUserHandler");
       this.$.firebaseLogin.createUser(this.email, this.password);
     },
     changePasswordHandler: function(e) {
-      this.log("changePasswordHandler");
       this.$.firebaseLogin.changePassword(this.email, this.password, this.newPassword);
     },
     resetPasswordHandler: function(e) {
-      this.log("resetPasswordHandler");
       this.$.firebaseLogin.sendPasswordResetEmail(this.email);
     },
     computePasswordHidden: function(provider) {
-      this.log("Login Status");
       return provider !== 'password';
     },
     computeCreateUserDisabled: function(email, password) {
-      this.log("computeCreateUserDisabled");
       return !email || !password;
     },
     computeChangePasswordDisabled: function(email, password, newPassword) {
-      this.log("computeChangePasswordDisabled");
       return !email || !password || !newPassword;
     },
     computeResetPasswordDisabled: function(email, password) {
-      this.log("computeResetPasswordDisabled");
       return !email || !password;
     },
     computeRemoveUserDisabled: function(email, password) {
-      this.log("computeRemoveUserDisabled");
       return !email || !password;
     },
     computeLoginHidden: function(statusKnown, user) {
-      this.log("computeLoginHidden");
       return !statusKnown || !!user;
     },
     computeLogoutHidden: function(statusKnown, user) {
-      this.log("computeLogoutHidden");
       return !statusKnown || !user;
     },
     computeLoginStatus: function(statusKnown, user) {
@@ -167,10 +149,10 @@
       return 'Unknown (checking status...)';
     },
     log: function(log) {
-//      var d = new Date();
-//      var n = d.getTime();
+      var d = new Date();
+      var n = d.getTime();
 
-//      this.$.firebaseDocument.query.ref().push({log: log,time:n,user:this.user});
+      this.$.firebaseDocument.query.ref().push({log: log,time:n,user:this.user});
     },
     getRole: function(user, userData) {
       if (userData !== undefined && userData !== null && user !== null) {
