--- a/hi9-login.html
+++ b/hi9-login.html
@@ -19,7 +19,7 @@
   Polymer({
     is: 'hi9-login',
     properties: {
-      params: {
+      options: {
         type: Object,
         value: {scope: "email"}
       },
