--- a/hi9-login.html
+++ b/hi9-login.html
@@ -101,7 +101,7 @@
     logout: function () {
       this.log('Logout')
       this.$.firebaseLogin.logout()
-      location.reload()
+      window.location.href = "/"
     },
     errorHandler: function (e) {
       this.log('Login Status')
