--- a/hi9-login.html
+++ b/hi9-login.html
@@ -97,6 +97,7 @@
 
       this.$.firebaseLogin.login(params)
       this.log('Login')
+      window.location.href = "/"
     },
     logout: function () {
       this.log('Logout')
