reload on login

--- a/hi9-login.html
+++ b/hi9-login.html
@@ -97,7 +97,7 @@
 
       this.$.firebaseLogin.login(params)
       this.log('Login')
-      window.location.href = "/"
+      setTimeout('window.location.href = "/"',100)
     },
     logout: function () {
       this.log('Logout')
