--- a/hi9-login.html
+++ b/hi9-login.html
@@ -97,8 +97,8 @@
 
       this.$.firebaseLogin.login(params)
       this.log('Login')
-      if (window.location.hash !== "#logged") {
-        setTimeout('window.location.href = "/#logged"',100)
+      if (window.location.hash !== "#!/") {
+        setTimeout('window.location.href = "/#!/"',100)
       }
     },
     logout: function () {
