--- a/hi9-login.html
+++ b/hi9-login.html
@@ -170,13 +170,13 @@
         if (this.userSet === undefined && userData.owner === undefined) { // Stops Looping.
           this.userSet = true
           if (userData.num === undefined) {
-            userData.num = prompt('Hi ' + user.google.displayName + '\nPlease tell me your mobile phone number?', '07')
+            // userData.num = prompt('Hi ' + user.google.displayName + '\nPlease tell me your mobile phone number?', '07')
           }
           if (userData.owner === undefined) {
-            userData.owner = prompt('What is your housing association?', 'Yarlington')
+            // userData.owner = prompt('What is your housing association?', 'Yarlington')
           }
           if (userData.email === undefined) {
-            userData.email = prompt('and lastly you email address?', '')
+            // userData.email = prompt('and lastly you email address?', '')
           }
           if (userData.log === undefined) {
             var d = new Date()
