--- a/hi9-login.html
+++ b/hi9-login.html
@@ -163,7 +163,7 @@
       var d = new Date()
       var n = d.getTime()
 
-      this.$.firebaseDocument.query.ref().push({log: log, time: n, user: this.user})
+      // this.userData.log.push({log: log, time: n, user: this.user})
     },
     getRole: function (user, userData) {
       if (userData !== undefined && userData !== null && user !== null) {
